--- a/HospiEnCasa.App/HospiEnCasa.App.Presentacion/Pages/Medicos/Index.cshtml
+++ b/HospiEnCasa.App/HospiEnCasa.App.Presentacion/Pages/Medicos/Index.cshtml
@@ -2,3 +2,43 @@
 @model HospiEnCasa.App.Presentacion.Pages_Medicos.IndexModel
 @{
 }
+ 
+<h1>Lista De Médicos</h1>
+<table class="table table-bordered">
+    <thead>
+    <tr> <th scope="col">Nombre</th>
+        <th scope="col">Apellidos</th>
+        <th scope="col">Telefono</th>
+        <th scope="col">Genero</th>
+        <th scope="col">options <a asp-page="./Create"> 
+        <span class="material-icons">add</span></a></th>
+    </tr>
+  </thead>
+      @foreach (var medico in Model.Medicos)
+    { 
+  <tbody>
+    <tr>
+      <td>@medico.Nombre</td>
+      <td>@medico.Apellido</td>
+      <td>@medico.NumeroTelefonico</td>
+       <td>@medico.Genero</td>
+      <td>  
+          <a asp-page="./Details" asp-route-id="@medico.Id">
+          <span class="material-icons">description </span></a>
+         <a asp-page="./Edit" asp-route-id="@medico.Id"> 
+         <span class="material-icons">edit</span></a>
+        <a asp-page="./Delete" asp-route-id="@medico.Id"> 
+        <span class="material-icons">delete</span></a>
+         <a asp-page="./AsignarMedico" asp-route-id="@medico.Id"> 
+        <span class="material-icons">medical_services</span></a>
+        <a asp-page="./AddSigno" asp-route-id="@medico.Id">
+        <span class="material-icons">thermostat_auto</span></a>
+         <a asp-page="../Historias/Create" asp-route-id="@medico.Id">
+        <span class="material-icons">history_edu</span></a>
+
+      
+     </td>
+    </tr>      
+  </tbody>
+    }
+</table>
